some changes to hero section

--- a/index.html
+++ b/index.html
@@ -29,7 +29,12 @@
           </p>
           <p>With love, Clara Pachón”</p>
         </div>
-        <a href="#">Schedule a free call</a>
+        <div class="free-call">
+          <a
+            href="https://api.whatsapp.com/send?phone=12013045136&text=Hi, I would like to schedule a call with you"
+            >Schedule a free call</a
+          >
+        </div>
       </div>
     </div>
     <div class="section">
