I added some more info

--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
           challenges that you may face.
         </p>
       </div>
+      <h4>Benefits</h4>
       <div class="pink-panel">
         <p>Learn the basics of meditation.</p>
         <p>Develop a regular practice</p>
@@ -184,6 +185,16 @@
           harmony and vitality by clearing these blockages and promoting the
           free flow of energy.
         </p>
+      </div>
+      <h4>Energy healing can help you to:</h4>
+      <div class="pink-panel">
+        <p>Stress Reduction: Experience deep relaxation and stress relief.</p>
+        <p>Physical Healing: Promote the body’s natural healing abilities.</p>
+        <p>
+          Emotional Balance: Release emotional burdens and achieve emotional
+          equilibrium.
+        </p>
+        <p>Mental Clarity: Enhance mental focus and clarity.”</p>
       </div>
     </div>
     <footer>
