hero section almost done

--- a/index.html
+++ b/index.html
@@ -17,7 +17,16 @@
       <h1>Clara Pachon</h1>
       <h2>Hipnoterapist & Energy Healer</h2>
       <div class="hero">
-        <img src="./ClaraPachon.jpg" />
+        <div class="img-call-to-action">
+          <img src="./ClaraPachon.jpg" />
+          <div class="free-call-big-screen">
+            <a
+              href="https://api.whatsapp.com/send?phone=12013045136&text=Hi, I would like to schedule a call with you"
+              >Schedule a free call</a
+            >
+          </div>
+        </div>
+
         <div class="hero-text">
           <p>
             When I began my journey along this path of connecting with light
