--- a/index.html
+++ b/index.html
@@ -47,8 +47,11 @@
       </div>
     </div>
     <div class="section">
-      <h3>QHHT</h3>
-      <h4>Quantum Healing Hypnosis Therapy</h4>
+      <div>
+        <h3>QHHT</h3>
+        <h4>Quantum Healing Hypnosis Therapy</h4>
+      </div>
+
       <img src="./imgs/QHHT.PNG" />
       <div class="hero-text">
         <p>
@@ -61,7 +64,8 @@
       </div>
     </div>
     <div class="section">
-      <h3>Angelology</h3>
+      <div><h3>Angelology</h3></div>
+
       <img src="./imgs/angelology.PNG" />
       <div class="hero-text">
         <p>
