--- a/index.html
+++ b/index.html
@@ -51,16 +51,17 @@
         <h3>QHHT</h3>
         <h4>Quantum Healing Hypnosis Therapy</h4>
       </div>
-
-      <img src="./imgs/QHHT.PNG" />
-      <div class="hero-text">
-        <p>
-          “QHHT is a powerful healing modality that combines hypnosis with the
-          belief that we are all connected to a higher source of wisdom and
-          healing. QHHT sessions can help to heal a wide range of physical,
-          emotional, and spiritual issues, as well as gain insights into one’s
-          life purpose and connect with one’s higher self.
-        </p>
+      <div class="section-text">
+        <img src="./imgs/QHHT.PNG" />
+        <div class="hero-text text-adjust">
+          <p>
+            “QHHT is a powerful healing modality that combines hypnosis with the
+            belief that we are all connected to a higher source of wisdom and
+            healing. QHHT sessions can help to heal a wide range of physical,
+            emotional, and spiritual issues, as well as gain insights into one’s
+            life purpose and connect with one’s higher self.
+          </p>
+        </div>
       </div>
     </div>
     <div class="section">
