--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
           <p>
             When I began my journey along this path of connecting with light
             beings, I realized that angels do not come to predict the future or
-            make decisions for us. They constantly try to communicate with us
-            directly without violating the divine laws. As a result, today with
-            gratitude I dedicate my life to spreading the messages that come
-            from them.
+            make decisions for us. They are constantly trying to communicate
+            with us directly without violating the divine laws. As a result,
+            today with gratitude I dedicate my life to spreading the messages
+            that come from them.
           </p>
           <p>With love, Clara Pachón”</p>
         </div>
