big changes to all sections

--- a/index.html
+++ b/index.html
@@ -66,31 +66,36 @@
     </div>
     <div class="section">
       <div><h3>Angelology</h3></div>
+      <div class="wrapper">
+        <img src="./imgs/angelology.PNG" />
+        <div class="pink-white-text-wrapper">
+          <div class="hero-text white-panel">
+            <p>
+              Angelology therapy is a type of holistic healing that uses the
+              power of angels to help people heal physically, emotionally, and
+              spiritually. It is based on the belief that angels are always with
+              us and willing to help us, if we only ask.
+            </p>
+          </div>
+          <div class="pink-panel">
+            <p>
+              It gives us a deeper understanding of the spiritual world and our
+              place in it.
+            </p>
+            <p>
+              We can learn how to connect with our angels and receive their
+              guidance and support.
+            </p>
+            <p>
+              Knowing that we are surrounded by angels who love and support us
+              can bring us a great sense of hope and peace. We can trust that
+              our angels are always with us, even when we are going through
+              difficult times.
+            </p>
+          </div>
+        </div>
+      </div>
 
-      <img src="./imgs/angelology.PNG" />
-      <div class="hero-text">
-        <p>
-          Angelology therapy is a type of holistic healing that uses the power
-          of angels to help people heal physically, emotionally, and
-          spiritually. It is based on the belief that angels are always with us
-          and willing to help us, if we only ask.
-        </p>
-      </div>
-      <div class="pink-panel">
-        <p>
-          It gives us a deeper understanding of the spiritual world and our
-          place in it.
-        </p>
-        <p>
-          We can learn how to connect with our angels and receive their guidance
-          and support.
-        </p>
-        <p>
-          Knowing that we are surrounded by angels who love and support us can
-          bring us a great sense of hope and peace. We can trust that our angels
-          are always with us, even when we are going through difficult times.
-        </p>
-      </div>
       <div class="slideshow-container">
         <div class="mySlides fade">
           <div class="numbertext">1 / 5</div>
@@ -156,59 +161,73 @@
     </div>
     <div class="section">
       <h3>Meditation Coach</h3>
-      <img src="./imgs/meditation-coach.PNG" />
-      <div class="hero-text">
-        <p>
-          A meditation coach is a guide who can help you to learn the basics of
-          meditation, to develop a regular practice, and to overcome any
-          challenges that you may face.
-        </p>
-      </div>
-      <h4>Benefits</h4>
-      <div class="pink-panel">
-        <p>Learn the basics of meditation.</p>
-        <p>Develop a regular practice</p>
-        <p>Overcome challenges.</p>
-        <p>Tap into your inner wisdom and intuition.</p>
-        <p>Manifest your dreams Heal your wounds.</p>
+      <div class="wrapper reversed">
+        <img src="./imgs/meditation-coach.PNG" />
+        <div class="pink-white-text-wrapper">
+          <div class="hero-text white-panel">
+            <p>
+              A meditation coach is a guide who can help you to learn the basics
+              of meditation, to develop a regular practice, and to overcome any
+              challenges that you may face.
+            </p>
+          </div>
+          <h4>Benefits</h4>
+          <div class="pink-panel">
+            <p>Learn the basics of meditation.</p>
+            <p>Develop a regular practice</p>
+            <p>Overcome challenges.</p>
+            <p>Tap into your inner wisdom and intuition.</p>
+            <p>Manifest your dreams Heal your wounds.</p>
+          </div>
+        </div>
       </div>
     </div>
     <div class="section">
       <h3>Quantum Coach</h3>
-      <img src="./imgs/Quantum-coach.PNG" />
-      <div class="hero-text">
-        <p>
-          Quantum Coaching is a powerful tool that combines the wisdom of
-          quantum physics with psychology and spirituality. It is based on the
-          idea that our thoughts, emotions, and beliefs have a direct impact on
-          our reality, and we can transform our lives by shifting our perception
-          and focus.
-        </p>
+      <div class="wrapper">
+        <img src="./imgs/Quantum-coach.PNG" />
+        <div class="hero-text">
+          <p>
+            Quantum Coaching is a powerful tool that combines the wisdom of
+            quantum physics with psychology and spirituality. It is based on the
+            idea that our thoughts, emotions, and beliefs have a direct impact
+            on our reality, and we can transform our lives by shifting our
+            perception and focus.
+          </p>
+        </div>
       </div>
     </div>
     <div class="section">
       <h3>Energy Healing</h3>
-      <img src="./imgs/energy-healing.PNG" />
-      <div class="hero-text">
-        <p>
-          Energy Healing is a holistic practice that recognizes the connection
-          between the physical body, mind, emotions, and spirit. It operates on
-          the fundamental belief that our bodies are comprised of energy, and
-          imbalances or blockages in this energy can lead to physical,
-          emotional, or spiritual dis-ease. Energy Healing seeks to restore
-          harmony and vitality by clearing these blockages and promoting the
-          free flow of energy.
-        </p>
-      </div>
-      <h4>Energy healing can help you to:</h4>
-      <div class="pink-panel">
-        <p>Stress Reduction: Experience deep relaxation and stress relief.</p>
-        <p>Physical Healing: Promote the body’s natural healing abilities.</p>
-        <p>
-          Emotional Balance: Release emotional burdens and achieve emotional
-          equilibrium.
-        </p>
-        <p>Mental Clarity: Enhance mental focus and clarity.”</p>
+      <div class="wrapper reversed">
+        <img src="./imgs/energy-healing.PNG" />
+        <div class="pink-white-text-wrapper">
+          <div class="hero-text white-panel">
+            <p>
+              Energy Healing is a holistic practice that recognizes the
+              connection between the physical body, mind, emotions, and spirit.
+              It operates on the fundamental belief that our bodies are
+              comprised of energy, and imbalances or blockages in this energy
+              can lead to physical, emotional, or spiritual dis-ease. Energy
+              Healing seeks to restore harmony and vitality by clearing these
+              blockages and promoting the free flow of energy.
+            </p>
+          </div>
+          <h4>Energy healing can help you to:</h4>
+          <div class="pink-panel">
+            <p>
+              Stress Reduction: Experience deep relaxation and stress relief.
+            </p>
+            <p>
+              Physical Healing: Promote the body’s natural healing abilities.
+            </p>
+            <p>
+              Emotional Balance: Release emotional burdens and achieve emotional
+              equilibrium.
+            </p>
+            <p>Mental Clarity: Enhance mental focus and clarity.”</p>
+          </div>
+        </div>
       </div>
     </div>
     <footer>
