--- a/index.html
+++ b/index.html
@@ -106,45 +106,45 @@
           <div class="text">Improved mood and emotional well being</div>
         </div>
         <div class="mySlides fade">
-          <div class="numbertext">1 / 5</div>
+          <div class="numbertext">2 / 5</div>
           <img
-            src="./imgs/Carrete-angeology/Improved-mood-and-emotiona-well-being.png"
+            src="./imgs/Carrete-angeology/Deeper-connection-to-one's-angels.png"
             style="width: 100%"
           />
-          <div class="text">Improved mood and emotional well being</div>
+          <div class="text">Deeper connection to one's angels</div>
         </div>
         <div class="mySlides fade">
-          <div class="numbertext">1 / 5</div>
+          <div class="numbertext">3 / 5</div>
           <img
-            src="./imgs/Carrete-angeology/Improved-mood-and-emotiona-well-being.png"
+            src="./imgs/Carrete-angeology/Greater-sense-of-purpose.png"
             style="width: 100%"
           />
-          <div class="text">Improved mood and emotional well being</div>
+          <div class="text">Greater sense of purpose</div>
         </div>
         <div class="mySlides fade">
-          <div class="numbertext">1 / 5</div>
+          <div class="numbertext">4 / 5</div>
           <img
-            src="./imgs/Carrete-angeology/Improved-mood-and-emotiona-well-being.png"
+            src="./imgs/Carrete-angeology/increased-self-awareness-and-self-love.png"
             style="width: 100%"
           />
-          <div class="text">Improved mood and emotional well being</div>
+          <div class="text">Increased self awareness and self love</div>
         </div>
         <div class="mySlides fade">
-          <div class="numbertext">1 / 5</div>
+          <div class="numbertext">5 / 5</div>
           <img
-            src="./imgs/Carrete-angeology/Improved-mood-and-emotiona-well-being.png"
+            src="./imgs/Carrete-angeology/Reduce-stress-and-anxiety.png"
             style="width: 100%"
           />
-          <div class="text">Improved mood and emotional well being</div>
+          <div class="text">Reduce stress and anxiety</div>
         </div>
         <a class="prev" onclick="plusSlides(-1)"
           ><img
             class="prev"
             onclick="plusSlides(-1)"
-            src="./icon-arrow-left.png"
+            src="./arrow-left-70.png"
           />
         </a>
-        <div style="text-align: center">
+        <div class="dots-container">
           <span class="dot" onclick="currentSlide(1)"></span>
           <span class="dot" onclick="currentSlide(2)"></span>
           <span class="dot" onclick="currentSlide(3)"></span>
@@ -152,10 +152,7 @@
           <span class="dot" onclick="currentSlide(5)"></span>
         </div>
         <a class="next" onclick="plusSlides(1)"
-          ><img
-            class="next"
-            onclick="plusSlides(1)"
-            src="./icon-arrow-right.png"
+          ><img class="next" onclick="plusSlides(1)" src="./arrow-right-70.png"
         /></a>
       </div>
     </div>
@@ -230,6 +227,15 @@
         </div>
       </div>
     </div>
+    <div>
+      <div class="free-call-big-screen">
+        <a
+          href="https://api.whatsapp.com/send?phone=12013045136&text=Hi, I would like to schedule a call with you"
+          >Schedule a free call
+        </a>
+      </div>
+    </div>
+
     <footer>
       <div class="contact">
         <p>Contact:</p>
