new html spanish

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <body>
     <nav>
       <img src="./Logo-ClaraPachon.png" />
+      <div class="language"><a href="./index-spanish.html">ESPAÑOL</a></div>
     </nav>
     <div>
       <h1>Clara Pachon</h1>
@@ -114,10 +115,11 @@
           <h4>Benefits</h4>
           <div class="pink-panel">
             <p>Learn the basics of meditation.</p>
-            <p>Develop a regular practice</p>
+            <p>Develop a regular practice.</p>
             <p>Overcome challenges.</p>
             <p>Tap into your inner wisdom and intuition.</p>
-            <p>Manifest your dreams Heal your wounds.</p>
+            <p>Manifest your dreams. </p>
+            <p>Heal your wounds.</p>
           </div>
         </div>
       </div>
