--- a/index-spanish.html
+++ b/index-spanish.html
@@ -33,7 +33,7 @@
             Cuando empece en este camino con los seres de luz, entendi que los angeles no vienen a predecir el futuro o decidir por ti. Ellos siempre esperan tener una conexion directa con nostros sin romper las leyes divinas. Por eso hoy con gratitud me dedico a difundir los mensajes que vienen de ellos. 
 
           </p>
-          <p>Con amor, Clara Pachón”</p>
+          <p>Con amor, Clara Pachón</p>
         </div>
         <div class="free-call">
           <a
